--- a/ESP32-RFID-time-and-attendance-system-V2/platformio.ini
+++ b/ESP32-RFID-time-and-attendance-system-V2/platformio.ini
@@ -15,4 +15,5 @@ framework = arduino
 lib_deps = 
 	miguelbalboa/MFRC522@^1.4.12
 	northernwidget/DS3231@^1.1.2
-
+	adafruit/Adafruit GFX Library@^1.12.3
+	adafruit/Adafruit ST7735 and ST7789 Library@^1.11.0
